Stage: Development | Area: Frontend-Side-Navbar | Work: Fixed not showing button title and unclicked white color icon not change bug fixed.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,7 +19,8 @@
 
     --main-layout-border-color: var(--color-white);
 
-    --side-navbar-default-icon-color: var(--color-white);
+    --side-navbar-background: var(--color-primary);
+    --side-navbar-default-btn-icon-color: var(--color-white);
     --side-navbar-selected-btn-background: var(--color-secondary);
 
     --input-default-border-color: var(--color-white);
